--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 bidict==0.21.4
+cachelib==0.4.1
 click==8.0.3
 dnspython==2.1.0
-eventlet==0.32.0
 Flask==2.0.2
 Flask-Cors==3.0.10
+Flask-Session==0.4.0
 Flask-SocketIO==5.1.1
 Flask-SQLAlchemy==2.5.1
 gevent==21.8.0
