--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,92 @@
-bidict==0.21.4
-cachelib==0.4.1
+appdirs==1.4.3
+apt-xapian-index==0.49
+backcall==0.2.0
+backports.entry-points-selectable==1.1.0
+blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
 click==8.0.3
-dnspython==2.1.0
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+debugpy==1.4.3
+decorator==5.0.9
+distlib==0.3.2
+distro==1.4.0
+distro-info===0.23ubuntu1
+entrypoints==0.3
+filelock==3.0.12
 Flask==2.0.2
-Flask-Cors==3.0.10
-Flask-Session==0.4.0
-Flask-SocketIO==5.1.1
-Flask-SQLAlchemy==2.5.1
-gevent==21.8.0
-gevent-websocket==0.10.1
-greenlet==1.1.2
-gunicorn==20.1.0
+flask-talisman==0.8.1
+gpg===1.13.1-unknown
+httplib2==0.14.0
+idna==2.8
+importlib-metadata==1.5.0
+ipykernel==6.4.0
+ipython==7.27.0
+ipython-genutils==0.2.0
 itsdangerous==2.0.1
+jedi==0.18.0
 Jinja2==3.0.2
+jupyter-client==7.0.2
+jupyter-core==4.7.1
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
 MarkupSafe==2.0.1
-psycopg2-binary==2.9.1
-python-engineio==4.2.1
-python-socketio==5.4.1
-six==1.16.0
-SQLAlchemy==1.4.26
+matplotlib-inline==0.1.3
+more-itertools==4.2.0
+nest-asyncio==1.5.1
+netifaces==0.10.4
+numpy==1.21.2
+oauthlib==3.1.0
+olefile==0.46
+pandas==1.3.2
+parso==0.8.2
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==7.0.0
+platformdirs==2.2.0
+prompt-toolkit==3.0.20
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.10.0
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+PyQt5==5.14.1
+python-apt==2.0.0+ubuntu0.20.4.6
+python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
+pytz==2021.1
+PyYAML==5.3.1
+pyzmq==22.2.1
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+sip==4.19.21
+six==1.14.0
+systemd-python==234
+tabula-py==2.3.0
+tornado==6.1
+traitlets==5.1.0
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+virtualenv==20.0.17
+wadllib==1.3.3
+wcwidth==0.2.5
 Werkzeug==2.0.2
-zope.event==4.5.0
-zope.interface==5.4.0
+xkit==0.0.0
+zipp==1.0.0
